--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,48 @@
+
+buildscript {
+    repositories {
+        // Check that you have the following line (if not, add it):
+        mavenCentral()
+        google()  // Google's Maven repository
+        maven {
+            url 'https://maven.google.com/'
+        }
+
+    }
+    dependencies {
+
+        // Add this line
+        classpath 'com.google.gms:google-services:4.3.10'
+
+    }
+}
+
+
+
+
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
+
+allprojects {
+
+    repositories {
+        mavenCentral()
+        // Check that you have the following line (if not, add it):
+        google()  // Google's Maven repository
+
+        maven {
+            url 'https://maven.google.com/'
+        }
+
+    }
+}
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
